# fluxbox-wayland

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  debug_screencopy.py  fluxbox-portals.conf  fluxbox-wayland.conf.example  meson.build  plan.md  refactor_plan.md  run_complete_test_suite.sh  run_evidence_collection.sh  run_visual_test_headless.sh  run_visual_test_wayland.sh  run_visual_test_x11.sh  run_visual_test_xvfb.sh  setup_visual_testing.sh  simple_screenshot.sh  start_fluxbox_with_portal.sh  test_basic_functionality.py  test_comprehensive_visual.py  test_configuration_system.py  test_evidence_recorder.py  test_extreme_stress.py  test_input_handling.py  test_interactive_simulation.py  test_performance_stress.py  test_portal_screenshot.py  test_real_application_demo.py  test_surface_management.py  test_visual_demonstration.py  test_workspace_functionality.py  whatsleft.md
doc/: Makemodule.am  fluxbox-init-resources.tsv  fluxbox-wayland.1.in  startfluxbox-wayland.1.in
docs/: wayland-monoliths.md
evidence_20250601_143752/: client_connections.json  configuration.json  evidence_report.json  wayland_protocols.txt  wayland_sockets.json
include/: config.hpp  scene_wrapper.h  server.hpp  surface.hpp  theme.hpp  wlr_cpp_compat.h  workspace.hpp
protocols/: wlr-screencopy-unstable-v1-client-protocol.h
scripts/: fbwl-check-code-sloc-allowlist.txt  fbwl-check-code-sloc.py  fbwl-check-code-sloc.sh  fbwl-check-wayland-loc.sh  fbwl-extract-fluxbox-init-resources.py  fbwl-smoke-activate-focus-pattern.sh  fbwl-smoke-all.sh  fbwl-smoke-allow-remote-actions.sh  fbwl-smoke-alpha.sh  fbwl-smoke-apps-deco-mask.sh  fbwl-smoke-apps-hidden.sh  fbwl-smoke-apps-ignore-size-hints.sh  fbwl-smoke-apps-matchlimit.sh  fbwl-smoke-apps-rules-xwayland.sh  fbwl-smoke-apps-rules.sh  fbwl-smoke-apps-tab.sh  fbwl-smoke-autoraise.sh  fbwl-smoke-background.sh  fbwl-smoke-bindkey.sh  fbwl-smoke-cache-resources.sh  fbwl-smoke-changeworkspace-event.sh  fbwl-smoke-ci.sh  fbwl-smoke-cli-rc.sh  fbwl-smoke-clickraises.sh  fbwl-smoke-clientmenu-usepixmap.sh  fbwl-smoke-clientpattern-regex-quirk.sh  fbwl-smoke-clientpatterntest.sh  fbwl-smoke-clipboard.sh  fbwl-smoke-cmdlang-if-foreach.sh  fbwl-smoke-command-dialog.sh  fbwl-smoke-config-dir.sh  fbwl-smoke-cursor-shape.sh  fbwl-smoke-custommenu-clientmenu-pattern.sh  fbwl-smoke-data-control.sh  fbwl-smoke-default-deco.sh  fbwl-smoke-dnd.sh  fbwl-smoke-doubleclick.sh  fbwl-smoke-edge-snap.sh  fbwl-smoke-export-dmabuf.sh  fbwl-smoke-fbsetbg-wayland.sh  (+151 more)
src/: FbWinFrame.cc  FbWinFrameEvents.cc  FbWinFrameRender.cc  Makemodule.am  Remember.cc  RememberApp.hh  RememberIO.cc  RememberMenu.cc  Screen.cc  ScreenGeometry.cc  ScreenWorkspaces.cc  Window.cc  WindowEvents.cc  WindowMoveResize.cc  Window_internal.hh  config.cpp  cursor.cpp  fluxbox_compositor.cpp  full_compositor.cpp  keyboard.cpp  main.cpp  minimal_main.cpp  output.cpp  portal_backend.cpp  scene_main.c  scene_wrapper.c  seat.cpp  server.cpp  simple_compositor.cpp  surface.cpp  wayland_screenshot.c  working_compositor.cpp  workspace.cpp  xdg_shell.cpp
util/: Makemodule.am  fbsetbg  fbwl-clipboard-client.c  fbwl-cursor-shape-client.c  fbwl-data-control-client.c  fbwl-dnd-client.c  fbwl-export-dmabuf-client.c  fbwl-foreign-toplevel-client.c  fbwl-fractional-scale-client.c  fbwl-idle-client.c  fbwl-input-injector.c  fbwl-input-method-client.c  fbwl-layer-shell-client.c  fbwl-output-management-client.c  fbwl-output-power-client.c  fbwl-presentation-time-client.c  fbwl-primary-selection-client.c  fbwl-relptr-client.c  fbwl-remote.c  fbwl-screencopy-client.c  fbwl-session-lock-client.c  fbwl-shortcuts-inhibit-client.c  fbwl-single-pixel-buffer-client.c  fbwl-smoke-client.c  fbwl-sni-item-client.c  fbwl-text-input-client.c  fbwl-viewporter-client.c  fbwl-xdg-activation-client.c  (+8 more)
(+232 files in other folders)
